--- a/tipCalculator/app/src/main/res/layout/activity_main.xml
+++ b/tipCalculator/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:textColorHint="@color/colorLightGray"
         android:background="@android:color/transparent"
         android:gravity="center"/>
-        <!--Separador-->
+    <!--Separador-->
     <View
         android:id="@+id/vRaitingButtons"
         android:layout_width="match_parent"
@@ -77,5 +77,90 @@
             />
 
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:id="@+id/vButtonsSeparator"
+        android:background="@color/colorLightGray"
+        android:layout_below="@+id/rlRatingButtons"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        />
+    <TextView
+        android:id="@+id/tvServiceRating"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAllCaps="true"
+        android:text="@string/main.msg.serviceration"
+        android:layout_below="@+id/vButtonsSeparator"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:gravity="center"
+        android:textColor="@color/colorWhite"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        />
 
+    <LinearLayout
+        android:id="@+id/llValues"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:orientation="horizontal"
+        android:divider="?android:dividerHorizontal"
+        android:showDividers="middle"
+        android:layout_below="@id/tvServiceRating">
+
+        <TextView
+            android:id="@+id/tvTipPercent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/main.msg.tippercent"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@color/colorWhite"
+            android:layout_marginTop="64dp"
+            android:gravity="center"
+            />
+        <TextView
+            android:id="@+id/tvTipAmount"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/main.msg.tiptotal"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@color/colorWhite"
+            android:layout_marginTop="64dp"
+            android:gravity="center"/>
+
+    </LinearLayout>
+    <View
+        android:id="@+id/TotalSeparator"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorLightGray"
+        android:layout_below="@+id/llValues"
+
+         android:layout_marginTop="@dimen/activity_vertical_margin"
+        />
+    <TextView
+        android:id="@+id/tvBillTotal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textAllCaps="true"
+        android:textColor="@color/colorWhite"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:layout_below="@+id/TotalSeparator"
+        android:text="@string/main.msg.billtotal"
+        android:layout_marginTop="@dimen/activity_vertical_margin_big"/>
+
+    <TextView
+        android:id="@+id/tvBillTotalAmount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textAllCaps="true"
+        android:textColor="@color/colorWhite"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:layout_below="@+id/tvBillTotal"
+        android:text="@string/main.msg.billtotalresult"
+        android:layout_marginTop="@dimen/activity_vertical_margin_big"/>
 </RelativeLayout>
